# Neurodynamics

./: CMakeLists.txt  LICENSE  README.md
headers/: connections_dense.h  connections_dense_mpi.h  connections_interface.h  connections_sparse.h  defines.h  neuron_hodgin.h  neuron_hodgin_mpi.h  neuron_interface.h  neuronetwork.h
sources/: CMakeLists.txt  connections_dense.cpp  connections_dense_mpi.cpp  main_neuro.cpp  neuron_hodgin.cpp  neuron_hodgin_mpi.cpp  neuronetwork.cpp
